--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/black"
-    >
+    android:background="@android:color/black">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline_vertical_1"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.1"
-        android:orientation="vertical"
-        />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline_vertical_2"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.9"
-        android:orientation="vertical"
-        />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline_horizontal_1"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        app:layout_constraintGuide_percent="0.1"
-        android:orientation="horizontal"
-        />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline_horizontal_2"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        app:layout_constraintGuide_percent="0.9"
-        android:orientation="horizontal"
-        />
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_1"
-        app:layout_constraintRight_toLeftOf="@+id/guideline_vertical_2"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical_1"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_2"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/white"
-        >
+        android:paddingLeft="4dp"
+        android:paddingTop="4dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="4dp"
+        android:visibility="gone" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="4dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="4dp"
-            android:paddingLeft="4dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/white"
-            android:visibility="gone"
-            />
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="?android:progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            />
-    </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
